--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <i class="fas fa-chevron-right"></i>
             </button>
         </div>
+        <div class="slide-imgs">
+            
+        </div>
         
     </div>
     <script src="main.js"></script>
