build the new one main.js file with full function

--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="nature">
-        <div class="title">Nature</div>
-        <div class="img-container">
-            <div class="img"><img src="./src/nature-1.jpeg" alt=""></div>
-        </div>
+      <div class="title">Nature</div>
+      <div class="img-container">
+        <div class="img"><img src="./src/nature-1.jpeg" alt="" /></div>
+      </div>
     </section>
     <section class="city">
-        <div class="title">City</div>
-        <div class="img-container">
-            <div class="img"><img src="./src/city-1.jpeg" alt=""></div>
-        </div>
+      <div class="title">City</div>
+      <div class="img-container">
+        <div class="img"><img src="./src/city-1.jpeg" alt="" /></div>
+      </div>
     </section>
 
     <div class="modal">
-        <button class="close-btn">X</button>
-        <div class="modal-content">
-            <button class="prev-btn">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <div class="img-display"><img src="./src/city-1.jpeg" alt=""></div>
-            <button class="next-btn">
-                <i class="fas fa-chevron-right"></i>
-            </button>
-        </div>
-        <div class="slide-imgs">
-            
-        </div>
-        
+      <button class="close-btn">X</button>
+      <div class="modal-content">
+        <button class="prev-btn">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <div class="img-display"><img src="./src/city-1.jpeg" alt="" /></div>
+        <button class="next-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+      </div>
+      <div class="slide-imgs"></div>
     </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
